--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   <a class="nav-link btn p-2 m-2" href="#!">Oficinas</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link btn btn-dark m-2 p-2" href="#!" style="background-color: #8C3647; color:white"><i class="bi bi-person" style="font-size: 1rem;"></i> Inicia sesión o regístrate</a>
+                  <a class="nav-link btn  btn-outline-light m-2 p-2" href="#!" style="background-color: #8C3647; color:white"><i class="bi bi-person" style="font-size: 1rem;"></i> Inicia sesión o regístrate</a>
               </li>
               </ul>
           </div>
@@ -51,7 +51,7 @@
                   <div class="col-xl-7 col-lg-8 col-md-10 text-start py-xl-3">
                       <h6 class="text-light pb-sm-2">ANANDA CANDIDATOS</h6>
                       <h1 class="text-light pb-sm-2">Busco trabajo</h1><span class="d-inline-block h5 text-light fw-light mx-2 opacity-70">Encuentra el empleo que mejor se ajuste a tu perfil e inscríbete. Te ayudamos a encontrar un trabajo en el que te sientas bien.</span>
-                      <div class="py-3 py-sm-3"><a class="btn btn-lg" style="background-color: #8C3647; color:white;font-weight: 500;" href="#!" data-scroll="">Ver ofertas<i class="bi bi-arrow-right"></i></a></div>
+                      <div class="py-3 py-sm-3"><a class="btn btn-lg  btn-outline-light" style="background-color: #8C3647; color:white;font-weight: 500;" href="#!" data-scroll="">Ver ofertas<i class="bi bi-arrow-right"></i></a></div>
                   </div>
               </div>
               </div>
@@ -60,7 +60,7 @@
                   <div class="col-xl-7 col-lg-8 col-md-10 text-end py-xl-3">
                       <h6 class="text-light pb-sm-2">ANANDA EMPRESAS</h6>
                       <h1 class="text-light pb-sm-2">Soy una empresa</h1><span class="d-inline-block h5 text-light fw-light mx-2 opacity-70">Tenemos las soluciones de Recursos Humanos que tu negocio necesita hoy, adaptadas a tu tamaño, sector y momento de actividad. Más de 500 empresas ya confían en Ananda.</span>
-                      <div class="py-3 py-sm-3"><a class="btn btn-lg" style="background-color: #8C3647; color:white;font-weight: 500;" href="#!" data-scroll="">Ananda empresas<i class="bi bi-arrow-right"></i></a></div>
+                      <div class="py-3 py-sm-3"><a class="btn btn-lg btn-outline-light" style="background-color: #8C3647; color:white;font-weight: 500;" href="#!" data-scroll="">Ananda empresas<i class="bi bi-arrow-right"></i></a></div>
                   </div>
                   </div>
               </div>
@@ -75,7 +75,7 @@
                       <div class="col-xl-7 col-lg-8 col-md-10 text-start py-xl-3">
                           <h6 class="text-light pb-sm-2">ANANDA CANDIDATOS</h6>
                           <h1 class="text-light pb-sm-2">Busco trabajo</h1><span class="d-inline-block h5 text-light fw-light mx-2 opacity-70">Encuentra el empleo que mejor se ajuste a tu perfil e inscríbete</span>
-                          <div class="py-3 py-sm-3"><a class="btn btn-lg" style="background-color: #8C3647; color:white;font-weight: 500;" href="#!" data-scroll="">Ver ofertas<i class="bi bi-arrow-right"></i></a></div>
+                          <div class="py-3 py-sm-3"><a class="btn btn-lg  btn-outline-light" style="background-color: #8C3647; color:white;font-weight: 500;" href="#!" data-scroll="">Ver ofertas<i class="bi bi-arrow-right"></i></a></div>
                       </div>
                   </div>
                   </div>
@@ -84,7 +84,7 @@
                       <div class="col-xl-7 col-lg-8 col-md-10 text-end py-xl-3">
                           <h6 class="text-light pb-sm-2">ANANDA EMPRESAS</h6>
                           <h1 class="text-light pb-sm-2">Soy una empresa</h1><span class="d-inline-block h5 text-light fw-light mx-2 opacity-70"> Más de 500 empresas ya confían en Ananda</span>
-                          <div class="py-3 py-sm-3"><a class="btn btn-lg" style="background-color: #8C3647; color:white;font-weight: 500;" href="#!" data-scroll="">Ananda empresas<i class="bi bi-arrow-right"></i></a></div>
+                          <div class="py-3 py-sm-3"><a class="btn btn-lg  btn-outline-light" style="background-color: #8C3647; color:white;font-weight: 500;" href="#!" data-scroll="">Ananda empresas<i class="bi bi-arrow-right"></i></a></div>
                       </div>
                       </div>
                   </div>
@@ -101,6 +101,23 @@
               <h4 class="mx-auto col-12 col-lg-8" style="font-weight: 400;">Ayudamos a las personas a encontrar un empleo en el que se sientan bien y apoyamos a las empresas a mejorar su competitividad a través del talento. Tenemos las soluciones de Recursos Humanos que tu negocio necesita hoy, adaptadas a tu tamaño, sector y momento de actividad.</h5>
           </div>
       </section>
+
+
+            <!--Banner-1------------------------------------------------------------------------------------>
+      <section id="banner-presupuesto">
+        <div class="d-flex row justify-content-center" style="background-color:#8C3647;">
+            <div class="d-none d-lg-block container-fluid text-center col-6 p-5">
+                <img class="img-fluid" src="https://ik.imagekit.io/ehiyh7jvx/img/clock-history-8.png?updatedAt=1691049902805" style="max-height:350px;">
+            </div>
+            <div class="container-fluid text-light col-12 col-lg-6 p-5">
+                <h6>¿Necesitas trabajadores?</h6>
+                <h1 class="display-2">solicita tu presupuesto online.</h1>
+                <p>Solicita un presupuesto sin compromiso. Cubrimos el 93% de los contratos en 24 horas. Paga sólo por las horas trabajadas y por el tiempo que necesites al trabajador. Ahorra en costes derivados del absentismo laboral, vacaciones, matrimonios, indemnizaciones y permisos retribuidos; con todas las garantías laborales.</p>
+                <a href="#!" class="btn btn-outline-light">Calcular presupuesto</a>
+            </div>
+        </div>
+      </section>
+
 
       <!--Info_1------------------------------------------------------------------------------------------>
       <section id="info-1" class="py-3 py-sm-5 d-flex justify-content-center">
