V.0.003 - Banner colour and Footer layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
         <!--Navbar------------------------------------------------------------------------------------------>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
+          <div class="container-fluid col-xl-8 col-lg-10">
           <a class="navbar-brand" href="#!"><img src="https://ik.imagekit.io/ehiyh7jvx/img/logo/logo_col_imagotipo.png?updatedAt=1690812562674" alt="" height="40"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -44,18 +44,18 @@
       </nav>
 
       <!---Call-to-action-1---------------------#417B5A--------------------->
-      <section id="call-1" style="background-color:#DCDE31" class="py-2 px-5" style="">
-        <div class="d-flex flex-row justify-content-between" style="color:#942145">
-            <span class="lead">¿Quieres saber por qué somos diferentes?<a href="#!" class="link-offset-2" style="color:#942145;text-decoration:none;"><strong> haz clic aquí <i class="bi bi-arrow-right"></i></strong></a></span>
-            <a href="#!" class="icon-link" style="color:#942145"><i class="bi bi-x-circle" style="font-size:1.25rem;"></i></a>
+      <section id="call-1" style="background-color:#DCDE31" class="d-flex flex-row justify-content-center py-2 px-3" style="">
+        <div class="d-flex flex-row justify-content-between text-dark col-12 col-xl-8 col-lg-10" style="">
+            <span>¿Quieres saber por qué somos diferentes?<a href="#!" class="link-offset-2" style="color:black;text-decoration:none;"><strong> haz clic aquí <i class="bi bi-arrow-right"></i></strong></a></span>
+            <a href="#!" class="icon-link" style="color:black"><i class="bi bi-x-circle" style="font-size:1.25rem;"></i></a>
         </section>
 
       <!--Slide-md+----------------------------------------------------------------------------------------->
-      <section id="slide" class="d-none d-md-block bg-accent bg-position-center bg-size-cover py-3 py-sm-5" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/slider.jpg?updatedAt=1690821695236'); background-position: center; background-repeat: no-repeat; background-size:cover; max-height: 600px;">
-          <div class="row">
+      <section id="slide" class="d-none d-md-flex flex-row justify-content-center bg-accent bg-position-center bg-size-cover py-3 py-sm-5" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/slider.jpg?updatedAt=1691055929606'); background-position: center; background-repeat: no-repeat; background-size:cover; max-height: 600px;">
+          <div class="row col-12 col-xl-8 col-lg-10">
               <div class="container py-5 col">
               <div class="row pt-md-2 pb-lg-2 justify-content-center">
-                  <div class="col-xl-7 col-lg-8 col-md-10 text-start py-xl-3">
+                  <div class="text-start py-xl-3">
                       <h6 class="text-light pb-sm-2">ANANDA CANDIDATOS</h6>
                       <h1 class="text-light pb-sm-2">Busco trabajo</h1><span class="d-inline-block h5 text-light fw-light mx-2 opacity-70">Encuentra el empleo que mejor se ajuste a tu perfil e inscríbete. Te ayudamos a encontrar un trabajo en el que te sientas bien.</span>
                       <div class="py-3 py-sm-3"><a class="btn btn-lg" style="background-color:#942145; color:white;font-weight: 500;" href="#!" data-scroll="">Ver ofertas<i class="bi bi-arrow-right ms-2"></i></a></div>
@@ -64,7 +64,7 @@
               </div>
               <div class="container py-5 col">
                   <div class="row pt-md-2 pb-lg-2 justify-content-center">
-                  <div class="col-xl-7 col-lg-8 col-md-10 text-end py-xl-3">
+                  <div class="text-end py-xl-3">
                       <h6 class="text-light pb-sm-2">ANANDA EMPRESAS</h6>
                       <h1 class="text-light pb-sm-2">Soy una empresa</h1><span class="d-inline-block h5 text-light fw-light mx-2 opacity-70">Tenemos las soluciones de Recursos Humanos que tu negocio necesita hoy, adaptadas a tu tamaño, sector y momento de actividad. Más de 500 empresas ya confían en Ananda.</span>
                       <div class="py-3 py-sm-3"><a class="btn btn-lg" style="background-color:#942145; color:white;font-weight: 500;" href="#!" data-scroll="">Ananda empresas<i class="bi bi-arrow-right ms-2"></i></a></div>
@@ -75,22 +75,22 @@
       </section>
 
       <!--Slide-md----------------------------------------------------------------------------------------->
-      <section id="slide" class="d-block d-md-none bg-accent bg-position-center bg-size-cover py-3 py-sm-5" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/slider_mbl.jpg?updatedAt=1690821789023'); background-position: center; background-repeat: no-repeat; background-size:cover;">
+      <section id="slide" class="d-block d-md-none bg-accent bg-position-center bg-size-cover py-3 py-sm-5" style="background-image: url('https://ik.imagekit.io/ehiyh7jvx/img/slider_mbl.jpg?updatedAt=1691055872853'); background-position: center; background-repeat: no-repeat; background-size:cover;">
           <div class="row d-flex flex-column justify-content-around">
-              <div class="container p-5 col">
+              <div class="container pb-5 pt-2 px-5 col">
                   <div class="row pt-md-2 pb-lg-2 justify-content-center">
                       <div class="col-xl-7 col-lg-8 col-md-10 text-start py-xl-3">
                           <h6 class="text-light pb-sm-2">ANANDA CANDIDATOS</h6>
-                          <h1 class="text-light pb-sm-2">Busco trabajo</h1><span class="d-inline-block h5 text-light fw-light mx-2 opacity-70">Encuentra el empleo que mejor se ajuste a tu perfil e inscríbete</span>
+                          <h2 class="text-light pb-sm-2">Busco trabajo</h1><span class="d-inline-block h6 text-light fw-light mx-2 opacity-70">Encuentra el empleo que mejor se ajuste a tu perfil e inscríbete</span>
                           <div class="py-3 py-sm-3"><a class="btn btn-lg" style="background-color:#942145; color:white;font-weight: 500;" href="#!" data-scroll="">Ver ofertas<i class="bi bi-arrow-right ms-2"></i></a></div>
                       </div>
                   </div>
                   </div>
-                  <div class="container p-5 col">
+                  <div class="container pt-5 pb-2 px-5 col">
                       <div class="row pt-md-2 pb-lg-2 justify-content-center">
                       <div class="col-xl-7 col-lg-8 col-md-10 text-end py-xl-3">
                           <h6 class="text-light pb-sm-2">ANANDA EMPRESAS</h6>
-                          <h1 class="text-light pb-sm-2">Soy una empresa</h1><span class="d-inline-block h5 text-light fw-light mx-2 opacity-70"> Más de 500 empresas ya confían en Ananda</span>
+                          <h2 class="text-light pb-sm-2">Soy una empresa</h1><span class="d-inline-block h6 text-light fw-light mx-2 opacity-70"> Más de 500 empresas ya confían en Ananda</span>
                           <div class="py-3 py-sm-3"><a class="btn btn-lg" style="background-color:#942145; color:white;font-weight: 500;" href="#!" data-scroll="">Ananda empresas<i class="bi bi-arrow-right ms-2"></i></a></div>
                       </div>
                       </div>
@@ -111,13 +111,13 @@
 
 
             <!--Banner-1------------------------------------------------------------------------------------>
-      <section id="banner-presupuesto" class="d-flex flex-row justify-content-center my3" style="background-color:#942145;">
+      <section id="banner-presupuesto" class="d-flex flex-row justify-content-center my3" style="background-color:#022B3A;">
         <div class="d-flex flex-row justify-content-center my-5">
             <div class="d-flex flex-row justify-content-around col-12 col-lg-10">
-                <div class="d-none d-lg-flex flex-column text-center col-4 justify-content-center p-3">
-                    <img class="img-fluid" src="https://ik.imagekit.io/ehiyh7jvx/img/clock-history-8.png?updatedAt=1691049902805" ">
+                <div class="d-none d-lg-flex flex-column text-center col-4 justify-content-center p-5" >
+                    <img class="img-fluid" src="https://ik.imagekit.io/ehiyh7jvx/img/clock-history-8.png?updatedAt=1691049902805" >
                 </div>
-                <div class="d-flex flex-column text-light col-12 col-lg-4">
+                <div class="d-flex flex-column text-light col-10 col-lg-4">
                     <h6>¿necesitas trabajadores?</h6>
                     <h1 class="display-2" style="line-height:4rem"><strong>solicita tu presupuesto</strong> online.</h1>
                     <p>Solicita un presupuesto sin compromiso. Cubrimos el 93% de los contratos en 24 horas. Paga sólo por las horas trabajadas y por el tiempo que necesites al trabajador. Ahorra en costes derivados del absentismo laboral, vacaciones, matrimonios, indemnizaciones y permisos retribuidos; con todas las garantías laborales.</p>
@@ -486,9 +486,9 @@
       </section>
 
       <!--Footer------------------------------------------------------------------------------------------->
-      <section id="Footer" class="text-light p-3" style="background-color:#022B3A">
-          <div class="row">
-              <div class="text-light col-12 col-md-4 col-lg-2 m-2">
+      <section id="Footer" class="d-flex text-light p-3 justify-content-center" style="background-color:#022B3A">
+          <div class="d-flex flex-wrap justify-content-between col-10">
+              <div class="text-light col-12 col-md-5 col-lg-3 col-xl-2 m-2">
                   <h5>EMPLEO</h5>
                   <ul class="list-unstyled">
                       <li>
@@ -520,7 +520,7 @@
                       </li>
                   </ul>
               </div>
-              <div  class="text-light col-12 col-md-4 col-lg-2  m-2">
+              <div  class="text-light col-12 col-md-5 col-lg-3 col-xl-2 m-2">
                   <h5>CIUDADES</h5>
                   <ul class="list-unstyled">
                       <li>
@@ -553,7 +553,7 @@
                       </li>
                   </ul>
               </div>
-              <div  class="text-light col-12 col-md-4 col-lg-2  m-2">
+              <div class="text-light col-12 col-md-5 col-lg-3 col-xl-2 m-2">
                   <h5>EMPRESAS</h5>
                   <ul class="list-unstyled">
                       <li>
@@ -577,7 +577,7 @@
                       </li>
                   </ul>
               </div>
-              <div  class="text-light col-12 col-md-4 col-lg-2  m-2">
+              <div class="text-light col-12 col-md-5 col-lg-3 col-xl-2 m-2">
                   <h5>CONTACTO</h5>
                   <ul class="list-unstyled">
                       <li>
@@ -591,21 +591,21 @@
                       </li>
                   </ul>
               </div>
-              <div  class="text-light col-12 col-md-4 col-lg-2  m-2">
+              <div class="text-light col-12 col-md-5 col-lg-3 col-xl-2 m-2">
                   <h5>REDES</h5>
-                  <a href="https://www.facebook.com/" class="linkrrss" name="Facebook" target="_blank" style="text-decoration: none; color:white">
+                  <a href="https://www.facebook.com/" class="linkrrss mx-2" name="Facebook" target="_blank" style="text-decoration: none; color:white">
                       <i class="bi bi-facebook"></i>
                   </a>
-                  <a href="https://www.instagram.com/" class="linkrrss" name="Instagram" target="_blank" style="text-decoration: none; color:white">
+                  <a href="https://www.instagram.com/" class="linkrrss mx-2" name="Instagram" target="_blank" style="text-decoration: none; color:white">
                       <i class="bi bi-instagram"></i>
                   </a>
-                  <a href="https://twitter.com/" class="linkrrss" name="Twitter" target="_blank" style="text-decoration: none; color:white">
+                  <a href="https://twitter.com/" class="linkrrss mx-2" name="Twitter" target="_blank" style="text-decoration: none; color:white">
                       <i class="bi bi-twitter"></i>
                   </a>
-                  <a href="https://www.linkedin.com/" class="linkrrss" name="Linkedin" target="_blank" style="text-decoration: none; color:white">
+                  <a href="https://www.linkedin.com/" class="linkrrss mx-2" name="Linkedin" target="_blank" style="text-decoration: none; color:white">
                       <i class="bi bi-linkedin"></i>
                   </a>
-                  <a href="https://www.tiktok.com/" class="linkrrss" name="Tik Tok" target="_blank" style="text-decoration: none; color:white">
+                  <a href="https://www.tiktok.com/" class="linkrrss mx-2" name="Tik Tok" target="_blank" style="text-decoration: none; color:white">
                       <i class="bi bi-tiktok"></i>
                   </a>
               </div>
