V.0.005 - Empresa flechas y texto justificado

--- a/index.html
+++ b/index.html
@@ -351,11 +351,12 @@
                                   </div>
                                   <div class="d-inline-flex flex-column justify-content-center">
                                       <h5 style="color:#942145">ETT: Necesito un trabajador temporal para mañana.</h5>
-                                      <p>
-                                          Cuéntanos tus necesidades y nosotros nos encargamos del resto. ¿Necesitas cubrir una baja? ¿Tienes un pico de producción?... Buscamos al candidato que mejor se ajusta al perfil solicitado, lo contratamos, gestionamos el alta y los trámites burocráticos y te cedemos al trabajador en el menor tiempo posible y durante el tiempo que lo necesites para que tú puedas centrarte en hacer crecer tu negocio. Olvídate de absentismos, gestión de bajas o despidos.              </div>
-                                  <div class="d-none d-md-inline-flex flex-column justify-content-center">
-                                      <a href="#!" class="" style="text-decoration: none; color:#942145;font-size: 2rem;"><i class="bi bi-arrow-right"></i></a>
-                                  </div>
+                                      <p style="text-align:justify">
+                                          Cuéntanos tus necesidades y nosotros nos encargamos del resto. ¿Necesitas cubrir una baja? ¿Tienes un pico de producción?... Buscamos al candidato que mejor se ajusta al perfil solicitado, lo contratamos, gestionamos el alta y los trámites burocráticos y te cedemos al trabajador en el menor tiempo posible y durante el tiempo que lo necesites para que tú puedas centrarte en hacer crecer tu negocio. Olvídate de absentismos, gestión de bajas o despidos.              
+                                      </p>
+                                      <a href="#!" class="" style="text-decoration: none;"><h6 style="color:#942145">Ver más <i class="bi bi-arrow-right"></i></h6></a>
+                                    </div>
+                                  
                               </div>
                           </td>
                       </tr>
@@ -367,13 +368,11 @@
                                   </div>
                                   <div class="d-inline-flex flex-column justify-content-center">
                                       <h5 style="color:#942145">Outsourcing: Necesito externalizar los recursos humanos de mi empresa. </h5>
-                                      <p>
+                                      <p style="text-align:justify">
                                           Nos encargamos de diseñar la plantilla que necesitas, analizando los perfiles psicológicos que mejor se adaptan y más valor añadido aportan al equipo. Buscamos a los mejores profesionales para el proyecto concreto, los contratamos, formamos y gestionamos todos los trámites burocráticos relacionados con la gestión de RRHH, para que tú puedas dedicarte al core de tu negocio y simplemente pagar una factura. Te ayudamos a que puedas aprovechar todas las oportunidades cuando surgen, proporcionándote flexibilidad y recursos humanos cuando los necesitas.
-                                      </p>
-                                  </div>
-                                  <div class="d-none d-md-inline-flex flex-column justify-content-center">
-                                      <a href="#!" class="" style="text-decoration: none; color:#942145;font-size: 2rem;"><i class="bi bi-arrow-right"></i></a>
-                                  </div>
+                                        </p>
+                                        <a href="#!" class="" style="text-decoration: none;"><h6 style="color:#942145">Ver más <i class="bi bi-arrow-right"></i></h6></a>
+                                      </div>
                               </div>
                           </td>
                       </tr>
@@ -385,13 +384,11 @@
                                   </div>
                                   <div class="d-inline-flex flex-column justify-content-center">
                                       <h5 style="color:#942145">Seleccion y evaluación de talento: Necesito contratar al profesional ideal.</h5>
-                                      <p>                                            
+                                      <p style="text-align:justify">                                            
                                           Si necesitas contratar a un trabajador pero no tienes el tiempo o los recursos necesarios para llevar a cabo un proceso de búsqueda y selección de talento. Nosotros te ayudamos. Cuéntanos tus necesidades y nuestros consultores especializados en RRHH y psicólogos se encargarán de buscar y valorar a los candidatos hasta encontrar el mejor profesional para tu compañía y equipo. Gracias a nuestro método de evaluación de candidatos, te presentaremos a la persona ideal; aquella que reúne el conocimiento, la experiencia y los valores que estás buscando.
-                                      </p>
-                                  </div>
-                                  <div class="d-none d-md-inline-flex flex-column justify-content-center">
-                                      <a href="#!" class="" style="text-decoration: none; color:#942145;font-size: 2rem;"><i class="bi bi-arrow-right"></i></a>
-                                  </div>
+                                        </p>
+                                        <a href="#!" class="" style="text-decoration: none;"><h6 style="color:#942145">Ver más <i class="bi bi-arrow-right"></i></h6></a>
+                                      </div>
                               </div>
                           </td>
                       </tr>
@@ -403,18 +400,16 @@
                                   </div>
                                   <div class="d-inline-flex flex-column justify-content-center">
                                       <h5 style="color:#942145">Formación</h5>
-                                      <p>                                             
+                                      <p style="text-align:justify">                                             
                                           Ayudamos a que las plantillas desarrollen su talento y mejoren sus habilidades
                                           profesionales a través de la formación - upskilling y reskilling. Nuestras
                                           soluciones
                                           integrales de formación se adaptan a las necesidades de cada empresa, sea cual
                                           sea su
                                           tamaño o sector.
-                                      </p>
-                                  </div>
-                                  <div class="d-none d-md-inline-flex flex-column justify-content-center">
-                                      <a href="#!" class="" style="text-decoration: none; color:#942145;font-size: 2rem;"><i class="bi bi-arrow-right"></i></a>
-                                  </div>
+                                        </p>
+                                        <a href="#!" class="" style="text-decoration: none;"><h6 style="color:#942145">Ver más <i class="bi bi-arrow-right"></i></h6></a>
+                                      </div>
                               </div>
                           </td>
                       </tr>
@@ -426,18 +421,16 @@
                                   </div>
                                   <div class="d-inline-flex flex-column justify-content-center">
                                       <h5 style="color:#942145">Consultoría</h5>
-                                      <p>                                                                                         
+                                      <p style="text-align:justify">                                                                                         
                                           Acompañamos a las empresas en sus procesos de transformación y
                                           gestión del cambio a
                                           través de nuestra consultoría de Recursos Humanos. Aportamos soluciones
                                           innovadoras para
                                           que las organizaciones alcancen sus objetivos, incrementen su productividad y mejoren el
                                           bienestar de sus plantillas.
-                                      </p>
-                                  </div>
-                                  <div class="d-none d-md-inline-flex flex-column justify-content-center">
-                                      <a href="#!" class="" style="text-decoration: none; color:#942145;font-size: 2rem;"><i class="bi bi-arrow-right"></i></a>
-                                  </div>
+                                        </p>
+                                        <a href="#!" class="" style="text-decoration: none;"><h6 style="color:#942145">Ver más <i class="bi bi-arrow-right"></i></h6></a>
+                                      </div>
                               </div>
                           </td>
                       </tr>
