V.0.006 - Quitado Formación y consultoría

--- a/index.html
+++ b/index.html
@@ -392,6 +392,7 @@
                               </div>
                           </td>
                       </tr>
+                      <!--Quito formación y consultoría
                       <tr>
                           <td>
                               <div class="d-flex justify-content-center py-3">
@@ -434,6 +435,7 @@
                               </div>
                           </td>
                       </tr>
+                      -->
                   </table>
                   
               </div>
