--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                                       <i class="bi bi-check2-square" style="font-size: 3rem; color:#942145;"></i>
                                   </div>
                                   <div class="d-inline-flex flex-column justify-content-center">
-                                      <h5 style="color:#942145">Seleccion y evaluación de talento: Necesito contratar al profesional ideal.</h5>
+                                      <h5 style="color:#942145">Selección y evaluación talento: Necesito contratar al profesional ideal.</h5>
                                       <p style="text-align:justify">                                            
                                           Si necesitas contratar a un trabajador pero no tienes el tiempo o los recursos necesarios para llevar a cabo un proceso de búsqueda y selección de talento. Nosotros te ayudamos. Cuéntanos tus necesidades y nuestros consultores especializados en RRHH y psicólogos se encargarán de buscar y valorar a los candidatos hasta encontrar el mejor profesional para tu compañía y equipo. Gracias a nuestro método de evaluación de candidatos, te presentaremos a la persona ideal; aquella que reúne el conocimiento, la experiencia y los valores que estás buscando.
                                         </p>
