--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
               <ul class="navbar-nav">
               <li class="nav-item">
                   <a class="nav-link btn p-2 m-2" href="#!">SOY CANDIDATO</a>
@@ -30,11 +30,12 @@
               <li class="nav-item">
                   <a class="nav-link btn p-2 m-2" href="#!">SOY EMPRESA</a>
               </li>
-              </ul>
-              <ul class="navbar-nav">
               <li class="nav-item">
                   <a class="nav-link btn p-2 m-2" href="#!">Oficinas</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link btn p-2 m-2" href="#!">Valores</a>
+            </li>
               <li class="nav-item">
                   <a class="nav-link btn  btn-outline-light m-2 p-2" href="#!" style="background-color:#942145; color:white"><i class="bi bi-person" style="font-size: 1rem;"></i> Inicia sesión o regístrate</a>
               </li>
