--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!--Navbar------------------------------------------------------------------------------------------>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid col-xl-8 col-lg-10">
-          <a class="navbar-brand" href="#!"><img src="https://ik.imagekit.io/ehiyh7jvx/img/logo/logo_col_imagotipo.png?updatedAt=1690812562674" alt="" height="40"></a>
+          <a class="navbar-brand" href="#!"><img src="https://ik.imagekit.io/ehiyh7jvx/img/logo/logo-col-paleta1-imagotipo.png?updatedAt=1691060745545" alt="" height="40"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
@@ -104,7 +104,7 @@
       <!--Abstract------------------------------------------------------------------------------------------>
       <section id="ananda-abstract" class="p-3 p-sm-5">
           <div class="container-fluid text-center">
-              <img class="my-2 mx-auto d-block" src="https://ik.imagekit.io/ehiyh7jvx/img/logo/logo_col.png?updatedAt=1690812562718" alt="" height="30">
+              <img class="my-2 mx-auto d-block" src="https://ik.imagekit.io/ehiyh7jvx/img/logo/logo-col-paleta1-logotipo.png?updatedAt=1691060745643" alt="" height="30">
               <h1 class="mx-auto col-12 col-lg-8">30 años conectando talento con oportunidades laborales</h3>
               <h4 class="mx-auto col-12 col-lg-8" style="font-weight: 400;">Ayudamos a las personas a encontrar un empleo en el que se sientan bien y apoyamos a las empresas a mejorar su competitividad a través del talento. Tenemos las soluciones de Recursos Humanos que tu negocio necesita hoy, adaptadas a tu tamaño, sector y momento de actividad.</h5>
           </div>
@@ -139,7 +139,7 @@
                   <h5>Atención personalizada cerca de tí</h5>
                   <p>Gracias a nuestra red de más de 50 oficinas en todo el territorio nacional, podemos brindarte una atención personal y completamente especializada. Contacta con los consultores/as de tu ciudad, ellos conocen perfectamente el mercado laboral de tu localidad y te ayudarán a encontrar el empleo que más se adapta a ti o las soluciones de RRHH que tu negocio necesita en estos momentos.</p>
                   <div class="container-fluid mt-5">
-                      <img src="https://ik.imagekit.io/ehiyh7jvx/img/mapa.png?updatedAt=1690812555090" alt="" class="img-fluid my-5">
+                      <img src="https://ik.imagekit.io/ehiyh7jvx/img/mapa_nuevos_colores.png?updatedAt=1691061018813" alt="" class="img-fluid my-5">
                       <a href="#!" class="" style="text-decoration: none;"><h6 style="color:#942145">Ver todas las oficinas <i class="bi bi-arrow-right"></i></h6></a>
                   </div>
               </div>
